--- a/less/uikit/variables.less
+++ b/less/uikit/variables.less
@@ -13,14 +13,14 @@
 // Text
 //
 
-@global-color:                                  #888888;
+@global-color: #dadada;
 @global-muted-color:                            #adadad;
 
 @global-link-color:                             #4091D2;
 @global-link-hover-color:                       #4587BE;
 
-@global-dark-color:                             #525255;
-@global-contrast-color:                         #fff;
+@global-dark-color: #bbbbc1;
+@global-contrast-color: #858585;
 
 @global-font-size:                              16px;
 @global-line-height:                            26px;
@@ -29,12 +29,12 @@
 // Backgrounds & Borders
 //
 
-@global-background:                             #fff;
-@global-border:                                 #e5e5e5;
+@global-background: #464646;
+@global-border: #292929;
 
-@global-default-background:                     #f5f5f5;
-@global-default-hover-background:               #fafafa;
-@global-default-active-background:              #eee;
+@global-default-background: #5d5d5d;
+@global-default-hover-background: #a1a1a1;
+@global-default-active-background: #c6c6c6;
 
 @global-primary-background:                     #489be0;
 @global-primary-hover-background:               #3a94e0;
