--- a/less/uikit/breadcrumb.less
+++ b/less/uikit/breadcrumb.less
@@ -7,36 +7,22 @@
 // Variables
 // ========================================================================
 
-@breadcrumb-font-size:                          round((@global-font-size * 0.85)); // 12px / 14px
-
-@breadcrumb-disabled-color:                     fade(@global-muted-color, 50%);
-@breadcrumb-divider-margin:                     12px;
+@breadcrumb-disabled-color:                     @global-muted-color;
 
 
 // Component
 // ========================================================================
 
-.hook-breadcrumb() {
-    color: @global-muted-color;
-    text-transform: uppercase;
-}
+.hook-breadcrumb() {}
 
 
 // Items
 // ========================================================================
 
-.hook-breadcrumb-divider() { color: @global-muted-color; }
+.hook-breadcrumb-divider() {}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-breadcrumb-misc() {
-
-    .uk-breadcrumb > li > a { color: @global-muted-color; }
-    .uk-breadcrumb > li > a:hover {
-        color: @global-color;
-        text-decoration: none;
-    }
-
-}
+.hook-breadcrumb-misc() {}
