--- a/less/uikit/close.less
+++ b/less/uikit/close.less
@@ -19,7 +19,10 @@
 // Modifier: `uk-close-alt`
 // ========================================================================
 
-.hook-close-alt() { box-shadow: 0 0 0 1px rgba(0,0,0,0.1); }
+.hook-close-alt() {
+    box-shadow: 0 0 0 1px rgba(0,0,0,0.1),
+                0 0 6px rgba(0,0,0,0.3);
+}
 
 
 // Miscellaneous
