--- a/less/uikit/table.less
+++ b/less/uikit/table.less
@@ -8,18 +8,13 @@
 // ========================================================================
 
 @table-margin-vertical:                         @global-margin;
-@table-padding-vertical:                        16px;
-@table-padding-horizontal:                      12px;
 
 @table-caption-color:                           @global-muted-color;
 @table-caption-font-size:                       round((@global-font-size * 0.85)); // 12px / 14px
 
 @table-striped-background:                      #fafafa;
 
-@table-condensed-padding-vertical:              10px;
-@table-condensed-padding-horizontal:            12px;
-
-@table-hover-background:                        #ffffdd;
+@table-hover-background:                        darken(@table-striped-background, 4%);
 
 //
 // New
@@ -31,7 +26,7 @@
 // Component
 // ========================================================================
 
-.hook-table() {}
+.hook-table() { border-bottom: 1px solid @table-border; }
 
 .hook-table-active() {}
 
@@ -45,29 +40,4 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-table-misc() {
-
-    .uk-table th {
-    	border-bottom: 1px solid @table-border;
-        font-size: round((@global-font-size * 0.85)); // 12px / 14px
-        text-transform: uppercase;
-        font-weight: normal;
-        color: @global-muted-color;
-    }
-
-    .uk-table :not(:first-child) > th { padding-top: @table-padding-vertical + @global-margin; }
-
-    .uk-table :not(:last-child) > td { border-bottom: 1px solid @table-border; }
-
-    .uk-table tfoot { border-top: 1px solid @table-border; }
-
-    .uk-table-middle img + a { vertical-align: middle; }
-
-    .uk-table-condensed th { padding: @table-condensed-padding-vertical @table-condensed-padding-horizontal; }
-
-    .uk-table tbody tr {
-        -webkit-transition: background-color 0.05s linear;
-        transition: background-color 0.05s linear;
-    }
-
-}
+.hook-table-misc() {}
