--- a/less/uikit/thumbnail.less
+++ b/less/uikit/thumbnail.less
@@ -9,7 +9,7 @@
 
 @thumbnail-border:                              @global-border;
 @thumbnail-background:                          @global-background;
-@thumbnail-hover-border:                        darken(@global-border, 10%);
+@thumbnail-hover-border:                        darken(@global-border, 20%);
 @thumbnail-hover-background:                    @global-background;
 
 @thumbnail-caption-color:                       @global-color;
@@ -18,7 +18,9 @@
 // Component
 // ========================================================================
 
-.hook-thumbnail() {}
+.hook-thumbnail() {
+    border-radius: @global-border-radius;
+}
 
 .hook-thumbnail-hover() {}
 
