--- a/less/uikit/article.less
+++ b/less/uikit/article.less
@@ -11,16 +11,14 @@
 
 @article-title-font-size:                       round((@global-font-size * 2.6)); // 36px / 42px
 @article-title-line-height:                     round((@article-title-font-size * 1.154)); // 42px / 48px
-@article-title-font-weight:                     300;
 
 @article-meta-font-size:                        round((@global-font-size * 0.85)); // 12px / 14px
 @article-meta-line-height:                      round((@article-meta-font-size * 1.46)); // 18px / 20px
 @article-meta-color:                            @global-muted-color;
 
 @article-lead-color:                            @global-color;
-@article-lead-font-size:                        round((@global-font-size * 1.4)); // 20px / 22px
-@article-lead-line-height:                      round((@article-lead-font-size * 1.28)); // 26px / 28px
-@article-lead-font-weight:                      300;
+@article-lead-font-size:                        round((@global-font-size * 1.28)); // 18px / 20px
+@article-lead-line-height:                      round((@article-lead-font-size * 1.32)); // 24px / 26px
 
 @article-divider-margin:                        @global-margin-large;
 @article-divider-border:                        @global-border;
@@ -41,16 +39,7 @@
 // Sub-object `uk-article-meta`
 // ========================================================================
 
-.hook-article-meta() {
-
-    a { color: @article-meta-color; }
-
-    a:hover {
-        color: @global-link-hover-color;
-        text-decoration: none;
-    }
-
-}
+.hook-article-meta() {}
 
 
 // Sub-object `uk-article-lead`
