--- a/less/uikit/badge.less
+++ b/less/uikit/badge.less
@@ -8,16 +8,13 @@
 // ========================================================================
 
 @badge-background:                              @global-primary-background;
-@badge-padding-horizontal:                      15px;
-@badge-font-size:                               round((@global-font-size * 0.78)); // 11px / 12px
-@badge-font-weight:                             600;
-@badge-line-height:                             round((@badge-font-size * 2)); // 22px / 24px
+@badge-font-size:                               round((@global-font-size * 0.74)); // 10px / 12px
+@badge-line-height:                             round((@badge-font-size * 1.36)); // 14px / 16px
 @badge-color:                                   @global-contrast-color;
-@badge-text-transform:                          uppercase;
 @badge-hover-color:                             @global-contrast-color;
 
-@badge-notification-font-size:                  round((@global-font-size * 0.78)); // 11px / 12px
-@badge-notification-line-height:                round((@badge-notification-font-size * 1.81)); // 20px / 22px
+@badge-notification-font-size:                  round((@global-font-size * 0.85)); // 12px / 14px
+@badge-notification-line-height:                round((@badge-notification-font-size * 1.46)); // 18px / 20px
 
 @badge-success-background:                      @global-success-background;
 @badge-warning-background:                      @global-warning-background;
@@ -27,13 +24,18 @@
 // New
 //
 
-@badge-padding-vertical:                         5px;
+@badge-border:                                  rgba(0,0,0,0.06);
+@badge-text-shadow:                             @global-contrast-text-shadow;
 
 
 // Component
 // ========================================================================
 
-.hook-badge() { padding: @badge-padding-vertical @badge-padding-horizontal; }
+.hook-badge() {
+    border: 1px solid @badge-border;
+    border-radius: 2px;
+    text-shadow: 0 1px 0 @badge-text-shadow;
+}
 
 
 // Color modifier
@@ -61,8 +63,4 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-badge-misc() {
-
-    .uk-badge-notification { padding: 0 7px; }
-
-}
+.hook-badge-misc() {}
