--- a/less/uikit/contrast.less
+++ b/less/uikit/contrast.less
@@ -4,6 +4,16 @@
 // ========================================================================
 
 
+// Variables
+// ========================================================================
+
+@contrast-button-primary-background:            @button-primary-background;
+@contrast-button-primary-hover-background:      @button-primary-hover-background;
+@contrast-button-primary-active-background:     @button-primary-active-background;
+
+@contrast-text-primary-color:                   @text-primary-color;
+
+
 // Base
 // ========================================================================
 
@@ -17,8 +27,8 @@
 // ========================================================================
 
 .hook-contrast-nav-side() {}
-.hook-contrast-nav-side-hover() {}
-.hook-contrast-nav-side-active() {}
+.hook-contrast-nav-side-hover() { text-shadow: none; }
+.hook-contrast-nav-side-active() { text-shadow: none; }
 .hook-contrast-nav-side-header() {}
 .hook-contrast-nav-side-divider() {}
 
@@ -50,8 +60,8 @@
 // Button
 // ========================================================================
 
-.hook-contrast-button() {}
-.hook-contrast-button-hover() {}
+.hook-contrast-button() { border-color: transparent; }
+.hook-contrast-button-hover() { border-color: transparent; }
 .hook-contrast-button-active() {}
 .hook-contrast-button-primary() {}
 .hook-contrast-button-primary-hover() {}
@@ -63,8 +73,8 @@
 
 .hook-contrast-icon-hover() {}
 .hook-contrast-icon-hover-hover() {}
-.hook-contrast-icon-button() {}
-.hook-contrast-icon-button-hover() {}
+.hook-contrast-icon-button() { border-color: transparent; }
+.hook-contrast-icon-button-hover() { border-color: transparent; }
 .hook-contrast-icon-button-active() {}
 
 
