--- a/less/uikit/icon.less
+++ b/less/uikit/icon.less
@@ -11,24 +11,29 @@
 @icon-hover-hover-color:                        @global-color;
 
 @icon-button-height:                            @icon-button-width;
-@icon-button-background:                        @global-primary-background;
+@icon-button-background:                        @global-default-background;
 @icon-button-font-size:                         round((@icon-button-width * 0.5));
-@icon-button-color:                             @global-contrast-color;
+@icon-button-color:                             @global-color;
 
-@icon-button-hover-background:                  @global-primary-hover-background;
-@icon-button-hover-color:                       @global-contrast-color;
+@icon-button-hover-background:                  @global-default-hover-background;
+@icon-button-hover-color:                       @global-color;
 
-@icon-button-active-background:                 @global-primary-active-background;
-@icon-button-active-color:                      @global-contrast-color;
+@icon-button-active-background:                 @global-default-active-background;
+@icon-button-active-color:                      @global-color;
+
+//
+// New
+//
+
+@icon-button-border:                            #e7e7e7;
+@icon-button-hover-border:                      #d3d3d3;
+@icon-button-text-shadow:                       @global-text-shadow;
 
 
 // Modifier: `uk-icon-hover`
 // ========================================================================
 
-.hook-icon-hover() {
-	-webkit-transition: color 0.05s linear;
-    transition: color 0.05s linear;
-}
+.hook-icon-hover() {}
 
 .hook-icon-hover-hover() {}
 
@@ -36,10 +41,13 @@
 // Modifier: `uk-icon-button`
 // ========================================================================
 
-.hook-icon-button() {}
+.hook-icon-button() {
+    border: 1px solid @icon-button-border;
+    text-shadow: 0 1px 0 @icon-button-text-shadow;
+}
 
 // Hover
-.hook-icon-button-hover() {}
+.hook-icon-button-hover() { border-color: @icon-button-hover-border; }
 
 // Active
 .hook-icon-button-active() {}
