--- a/less/uikit/modal.less
+++ b/less/uikit/modal.less
@@ -8,16 +8,12 @@
 // ========================================================================
 
 @modal-z-index:                                 @global-z-index + 10;
-@modal-background:                              rgba(245,245,245,0.5);
 
-@modal-dialog-padding:                          40px;
 @modal-dialog-background:                       @global-background;
 
-@modal-dialog-large-width-large:                1120px;
+@modal-header-margin-bottom:                    @global-margin;
 
-@modal-header-margin-bottom:                    @modal-dialog-padding;
-
-@modal-footer-margin-top:                       @modal-dialog-padding;
+@modal-footer-margin-top:                       @global-margin;
 
 @modal-caption-color:                           @global-contrast-color;
 
@@ -31,29 +27,39 @@
 // Sub-object: `uk-modal-dialog`
 // ========================================================================
 
-.hook-modal-dialog() { box-shadow: 0 10px 20px rgba(0,0,0,0.3); }
+.hook-modal-dialog() {
+    border-radius: @global-border-radius;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
 
 
 // Modifier: `uk-modal-dialog-lightbox`
 // ========================================================================
 
-.hook-modal-dialog-lightbox() {}
+.hook-modal-dialog-lightbox() { border-radius: 0; }
 
 
 // Sub-object: `uk-modal-header`
 // ========================================================================
 
-.hook-modal-header() { margin-bottom: @modal-header-margin-bottom; }
+.hook-modal-header() {
+    margin: (-@modal-dialog-padding) (-@modal-dialog-padding) @modal-header-margin-bottom (-@modal-dialog-padding);
+    padding: @modal-dialog-padding;
+    border-bottom: 1px solid @global-border;
+    border-radius: @global-border-radius @global-border-radius 0 0;
+    background: #fafafa;
+}
 
 
 // Sub-object: `uk-modal-footer`
 // ========================================================================
 
 .hook-modal-footer() {
-    margin: @modal-footer-margin-top -@modal-dialog-padding -@modal-dialog-padding -@modal-dialog-padding !important;
-    padding: 15px @modal-dialog-padding;
-    background: fade(@global-default-background, 30%);
+    margin: @modal-footer-margin-top (-@modal-dialog-padding) (-@modal-dialog-padding) (-@modal-dialog-padding);
+    padding: @modal-dialog-padding;
     border-top: 1px solid @global-border;
+    border-radius: 0 0 @global-border-radius @global-border-radius;
+    background: #fafafa;
 }
 
 
