--- a/less/uikit/nestable.less
+++ b/less/uikit/nestable.less
@@ -18,6 +18,7 @@
 //
 
 @nestable-border:                               rgba(0,0,0,0.06);
+@nestable-text-shadow:                          @global-text-shadow;
 
 
 // Component
@@ -37,7 +38,11 @@
 
 .hook-nestable-toggle() {}
 
-.hook-nestable-panel() { border: 1px solid @nestable-border; }
+.hook-nestable-panel() {
+	border-radius: @global-border-radius;
+    border: 1px solid @nestable-border;
+    text-shadow: 0 1px 0 @nestable-text-shadow;
+}
 
 
 // Miscellaneous
