--- a/less/uikit/offcanvas.less
+++ b/less/uikit/offcanvas.less
@@ -9,6 +9,12 @@
 
 @offcanvas-z-index:                             @global-z-index;
 
+//
+// New
+//
+
+@offcanvas-panel-text-shadow:                   rgba(0,0,0,0.5);
+
 
 // Component
 // ========================================================================
@@ -25,10 +31,34 @@
 // Panel in offcanvas
 // ========================================================================
 
-.hook-offcanvas-panel() {}
+.hook-offcanvas-panel() {
+    text-shadow: 0 1px 0 @offcanvas-panel-text-shadow;
+}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-offcanvas-misc() {}
+.hook-offcanvas-misc() {
+
+    .uk-offcanvas-bar:after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 1px;
+        background: rgba(0,0,0,0.6);
+        box-shadow: 0 0 5px 2px rgba(0,0,0,0.6);
+    }
+
+    .uk-offcanvas-bar-flip:after {
+        right: auto;
+        left: 0;
+        width: 1px;
+        background: rgba(0,0,0,0.6);
+        box-shadow: 0 0 5px 2px rgba(0,0,0,0.6);
+    }
+
+}
