--- a/less/uikit/pagination.less
+++ b/less/uikit/pagination.less
@@ -7,21 +7,29 @@
 // Variables
 // ========================================================================
 
-@pagination-padding-vertical:                   5px;
-@pagination-padding-horizontal:                 7px;
 @pagination-line-height:                        @global-line-height;
-@pagination-background:                         transparent;
-@pagination-color:                              @global-muted-color;
-@pagination-hover-background:                   transparent;
-@pagination-hover-color:                        @global-dark-color;
-@pagination-onclick-background:                 transparent;
-@pagination-onclick-color:                      @global-dark-color;
+@pagination-background:                         @global-default-background;
+@pagination-color:                              @global-color;
+@pagination-hover-background:                   @global-default-hover-background;
+@pagination-hover-color:                        @global-color;
+@pagination-onclick-background:                 @global-default-active-background;
+@pagination-onclick-color:                      @global-color;
 
-@pagination-active-background:                  transparent;
-@pagination-active-color:                       @global-dark-color;
+@pagination-active-background:                  @global-primary-background;
+@pagination-active-color:                       @global-contrast-color;
 
-@pagination-disabled-background:                transparent;
+@pagination-disabled-background:                @global-default-hover-background;
 @pagination-disabled-color:                     @global-muted-color;
+
+//
+// New
+//
+
+@pagination-border:                             rgba(0,0,0,0.06);
+@pagination-text-shadow:                        @global-text-shadow;
+@pagination-hover-border:                       rgba(0,0,0,0.16);
+
+@pagination-contrast-text-shadow:               @global-contrast-text-shadow;
 
 
 // Component
@@ -31,20 +39,32 @@
 // Items
 //
 
-.hook-pagination-item() {}
+.hook-pagination-item() {
+	border: 1px solid @pagination-border;
+	border-radius: @global-border-radius;
+}
 
 // Link
-.hook-pagination-link() { border-bottom: 2px solid transparent; }
+.hook-pagination-link() {
+    text-shadow: 0 1px 0 @pagination-text-shadow;
+}
 
-.hook-pagination-link-hover() {}
+.hook-pagination-link-hover() { border-color: @pagination-hover-border; }
 
 .hook-pagination-link-active() {}
 
 // Active
-.hook-pagination-active() { border-bottom: 2px solid @global-primary-background; }
+.hook-pagination-active() {
+	border-color: transparent;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
+    text-shadow: 0 -1px 0 @pagination-contrast-text-shadow;
+}
 
 // Disabled
-.hook-pagination-disabled() {}
+.hook-pagination-disabled() {
+    border: 1px solid @pagination-border;
+    text-shadow: 0 1px 0 @pagination-text-shadow;
+}
 
 
 // Miscellaneous
