--- a/less/uikit/panel.less
+++ b/less/uikit/panel.less
@@ -10,42 +10,37 @@
 @panel-title-margin-bottom:                     @global-margin;
 @panel-title-font-size:                         round((@global-font-size * 1.28)); // 18px / 20px
 @panel-title-line-height:                       round((@panel-title-font-size * 1.32)); // 24px / 26px
-@panel-title-font-weight:                       300;
-@panel-title-color:                             @global-dark-color;
+@panel-title-color:                             @global-color;
 
-@panel-teaser-margin-bottom:                    @panel-box-padding;
-
-@panel-box-padding:                             25px;
-@panel-box-background:                          @global-background;
+@panel-box-padding:                             @global-margin;
+@panel-box-background:                          #fafafa;
 @panel-box-color:                               @global-color;
-@panel-box-title-color:                         @global-dark-color;
+@panel-box-title-color:                         @global-color;
+@panel-box-teaser-margin:                       -(@panel-box-padding + 1);
 
-@panel-box-teaser-margin:                       -(@panel-box-padding);
+@panel-box-secondary-background:                #fff;
 
-@panel-box-badge-top:                           0;
-
-@panel-box-primary-background:                  @global-default-hover-background;
-@panel-box-primary-color:                       @global-color;
-@panel-box-primary-title-color:                 @global-dark-color;
-
-@panel-box-secondary-background:                @global-default-background;
-@panel-box-secondary-color:                     @global-color;
-@panel-box-secondary-title-color:               @global-dark-color;
-
-@panel-hover-padding:                           25px;
+@panel-hover-padding:                           @global-margin;
 @panel-hover-color:                             @global-color;
 @panel-hover-hover-color:                       @global-color;
-@panel-hover-hover-background:                  @global-background;
-@panel-hover-teaser-margin:                     -(@panel-hover-padding);
-
-@panel-hover-badge-top:                         0;
+@panel-hover-hover-background:                  #fafafa;
+@panel-hover-teaser-margin:                     -(@panel-hover-padding + 1);
 
 @panel-header-title-border:                     @global-border;
-@panel-header-title-color:                      @global-dark-color;
+@panel-header-title-color:                      @global-color;
 
 @panel-divider-gutter:                          @global-grid-gutter;
 @panel-divider-gutter-large:                    @global-grid-gutter-large;
 @panel-divider-border:                          @global-border;
+
+//
+// New
+//
+
+@panel-box-border:                              @global-border;
+@panel-box-primary-border:                      fade(@panel-box-primary-color, 30%);
+
+@panel-hover-border:                            @global-border;
 
 
 // Sub-object: `uk-panel-title`
@@ -63,21 +58,16 @@
 // Modifier: `uk-panel-box`
 // ========================================================================
 
-.hook-panel-box() { box-shadow: 0 1px 4px rgba(0, 0, 0, 0.09); }
+.hook-panel-box() {
+    border: 1px solid @panel-box-border;
+    border-radius: @global-border-radius;
+}
 
 .hook-panel-box-hover() {}
 
-//
-// Sub-modifier: `uk-panel-box-primary`
-//
-
-.hook-panel-box-primary() { box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12); }
+.hook-panel-box-primary() { border-color: @panel-box-primary-border; }
 
 .hook-panel-box-primary-hover() {}
-
-//
-// Sub-modifier: `uk-panel-box-secondary`
-//
 
 .hook-panel-box-secondary() {}
 
@@ -87,9 +77,12 @@
 // Modifier: `uk-panel-hover`
 // ========================================================================
 
-.hook-panel-hover() {}
+.hook-panel-hover() {
+    border: 1px solid transparent;
+    border-radius: @global-border-radius;
+}
 
-.hook-panel-hover-hover() { box-shadow: 0 1px 4px rgba(0, 0, 0, 0.09); }
+.hook-panel-hover-hover() { border-color: @panel-hover-border; }
 
 
 // Modifier: `uk-panel-header`
@@ -103,9 +96,12 @@
 
 .hook-panel-misc() {
 
-    .uk-panel-space .uk-panel-badge {
-        top: 0;
-        right: 0;
+    .uk-panel-box .uk-panel-teaser {
+        border-top-left-radius: @global-border-radius;
+        border-top-right-radius: @global-border-radius;
+        overflow: hidden;
+        // Fixed `overflow: hidden` to be ignored with border-radius and CSS transforms in Webkit
+        -webkit-transform: translateZ(0);
     }
 
 }
