--- a/less/uikit/progress.less
+++ b/less/uikit/progress.less
@@ -8,7 +8,7 @@
 // ========================================================================
 
 @progress-margin-vertical:                      @global-margin;
-@progress-background:                           @global-default-background;
+@progress-background:                           #f5f5f5;
 
 @progress-bar-background:                       @global-primary-background;
 @progress-bar-font-size:                        round((@global-font-size * 0.85)); // 12px / 14px
@@ -18,17 +18,29 @@
 @progress-bar-warning-background:               @global-warning-background;
 @progress-bar-danger-background:                @global-danger-background;
 
+//
+// New
+//
+
+@progress-bar-text-shadow:                      @global-contrast-text-shadow;
+
 
 // Component
 // ========================================================================
 
-.hook-progress() { border-radius: 500px; }
+.hook-progress() {
+    box-shadow: inset 0 0 0 1px rgba(0,0,0,0.06);
+    border-radius: @global-border-radius;
+}
 
 
 // Sub-object: `progress-bar`
 // ========================================================================
 
-.hook-progress-bar() {}
+.hook-progress-bar() {
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
+    text-shadow: 0 -1px 0 @progress-bar-text-shadow;
+}
 
 
 // Color modifiers
@@ -44,4 +56,12 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-progress-misc() {}
+.hook-progress-misc() {
+
+    /* Size modifiers
+     ========================================================================== */
+
+    .uk-progress-mini,
+    .uk-progress-small { border-radius: 500px; }
+
+}
