--- a/less/uikit/search.less
+++ b/less/uikit/search.less
@@ -8,17 +8,13 @@
 // ========================================================================
 
 @search-height:                                 @global-height;
-@search-padding:                                35px;
-@search-border-width:                           0;
 @search-color:                                  @global-color;
 @search-placeholder-color:                      @global-muted-color;
 
-@search-icon:                                   "";
-
 @dropdown-search-background:                    #fff;
 @dropdown-search-color:                         @global-color;
-@dropdown-search-navbar-margin-top:             5px;
-@dropdown-search-navbar-margin-right:           -15px;
+@dropdown-search-navbar-margin-top:             12px;
+@dropdown-search-navbar-margin-right:           -16px;
 
 @nav-search-color:                              @global-color;
 @nav-search-active-background:                  @global-primary-background;
@@ -28,32 +24,30 @@
 @nav-search-nested-color:                       @global-link-color;
 @nav-search-nested-hover-color:                 @global-link-hover-color;
 
+//
+// New
+//
+
+@nav-search-active-text-shadow:                 @global-contrast-text-shadow;
+
 
 // Component
 // ========================================================================
 
-.hook-search() { z-index: 1; }
+.hook-search() {}
 
-.hook-search-icon() {
-    height: @global-height;
-    background: url("@{global-image-path}/search.svg") 0 0 no-repeat;
-    z-index: -1;
-}
+.hook-search-icon() {}
 
 
 // Sub-object `uk-search-field`
 // ========================================================================
 
-.hook-search-field() {
-    padding-left: (@search-padding + 10px);
-    font-size: 18px;
-    font-weight: 300;
-}
+.hook-search-field() {}
 
 .hook-search-field-focus() {}
 
 
-// Dropdown modifier: `uk-dropdown-search`
+// Dropdow modifier: `uk-dropdown-search`
 // ========================================================================
 
 .hook-dropdown-search() {}
@@ -69,7 +63,10 @@
 .hook-nav-search() {}
 
 // Active
-.hook-nav-search-active() {}
+.hook-nav-search-active() {
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.05);
+    text-shadow: 0 -1px 0 @nav-search-active-text-shadow;
+}
 
 //
 // Sub-object: `uk-nav-header`
