--- a/less/uikit/subnav.less
+++ b/less/uikit/subnav.less
@@ -7,14 +7,13 @@
 // Variables
 // ========================================================================
 
-@subnav-margin-horizontal:                      20px;
 @subnav-color:                                  @global-color;
-@subnav-hover-color:                            @global-dark-color;
-@subnav-active-color:                           @global-dark-color;
+@subnav-hover-color:                            @global-link-color;
+@subnav-active-color:                           @global-link-color;
 
 @subnav-line-border:                            @global-border;
 
-@subnav-pill-hover-background:                  @global-default-hover-background;
+@subnav-pill-hover-background:                  #fafafa;
 @subnav-pill-hover-color:                       @global-color;
 @subnav-pill-active-background:                 @global-primary-background;
 @subnav-pill-active-color:                      @global-contrast-color;
@@ -32,26 +31,26 @@
 .hook-subnav-active() {}
 
 
-// Modifier: `uk-subnav-line`
+// Modifier: `uk-subnav-line'
 // ========================================================================
 
 .hook-subnav-line-divider() {}
 
 
-// Modifier: `uk-subnav-pill`
+// Modifier: `uk-subnav-pill'
 // ========================================================================
 
-.hook-subnav-pill() {}
+.hook-subnav-pill() { border-radius: @global-border-radius; }
 
-.hook-subnav-pill-hover() {}
+.hook-subnav-pill-hover() { box-shadow: 0 0 0 1px rgba(0,0,0,0.15); }
 
-.hook-subnav-pill-active() {}
+.hook-subnav-pill-active() { box-shadow: inset 0 0 5px rgba(0,0,0,0.05); }
 
 
 // Disabled state
 // ========================================================================
 
-.hook-subnav-disabled() {}
+.hook-subnav-disabled() { box-shadow: none; }
 
 
 // Miscellaneous
