--- a/less/uikit/tooltip.less
+++ b/less/uikit/tooltip.less
@@ -8,11 +8,15 @@
 // ========================================================================
 
 @tooltip-z-index:                               @global-z-index + 30;
-@tooltip-background:                            #666;
 
-@tooltip-color:                                 @global-contrast-color;
 @tooltip-font-size:                             round((@global-font-size * 0.85)); // 12px / 14px
 @tooltip-line-height:                           round((@tooltip-font-size * 1.46)); // 18px / 20px
+
+//
+// New
+//
+
+@tooltip-text-shadow:                           rgba(0,0,0,0.5);
 
 
 // Component
@@ -20,17 +24,11 @@
 
 .hook-tooltip() {
     border-radius: 3px;
-    opacity: 0;
-    -webkit-transition: opacity 0.15s linear;
-    transition: opacity 0.15s linear;
+    text-shadow: 0 1px 0 @tooltip-text-shadow;
 }
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-tooltip-misc() {
-
-    .uk-tooltip.uk-active { opacity: 1; }
-
-}
+.hook-tooltip-misc() {}
