--- a/less/uikit/variables.less
+++ b/less/uikit/variables.less
@@ -3,79 +3,67 @@
 //
 // ========================================================================
 
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:600,400,300';
-
 
 // Global variables
 // ========================================================================
+
+@icon-font-path: "../../../../../../../app/assets/uikit/fonts";
 
 //
 // Text
 //
 
-@global-color: #dadada;
-@global-muted-color:                            #adadad;
+@global-color:                                  #444;
+@global-muted-color:                            #999;
+@global-text-shadow:                            #fff;
 
-@global-link-color:                             #4091D2;
-@global-link-hover-color:                       #4587BE;
+@global-link-color:                             #07D;
+@global-link-hover-color:                       #059;
 
-@global-dark-color: #bbbbc1;
-@global-contrast-color: #858585;
+@global-contrast-color:                         #fff;
+@global-contrast-text-shadow:                   rgba(0,0,0,0.1);
 
-@global-font-size:                              16px;
-@global-line-height:                            26px;
+@global-font-size:                              14px;
+@global-line-height:                            20px;
 
 //
 // Backgrounds & Borders
 //
 
-@global-background: #464646;
-@global-border: #292929;
+@global-background:                             #fff;
+@global-border:                                 #ddd;
 
-@global-default-background: #5d5d5d;
-@global-default-hover-background: #a1a1a1;
-@global-default-active-background: #c6c6c6;
+@global-border-radius:                          4px;
 
-@global-primary-background:                     #489be0;
-@global-primary-hover-background:               #3a94e0;
-@global-primary-active-background:              #3589cf;
+@global-default-background:                     #f5f5f5;
+@global-default-hover-background:               #fafafa;
+@global-default-active-background:              #eee;
 
-@global-success-background:                     #3DC372;
-@global-success-hover-background:               #23b25c;
-@global-success-active-background:              #0fa74c;
-
-@global-danger-background:                      #e44e56;
-@global-danger-hover-background:                #db353f;
-@global-danger-active-background:               #d2232d;
-
-@global-warning-background:                     #FFB24E;
+@global-primary-background:                     #00a8e6;
+@global-success-background:                     #8cc14c;
+@global-warning-background:                     #faa732;
+@global-danger-background:                      #da314b;
 
 //
 // Spacings
 //
 
-@global-margin:                                 20px;
-@global-margin-large:                           35px;
-@global-grid-gutter:                            30px;
-@global-grid-gutter-large:                      40px;
+@global-margin:                                 15px;
+@global-margin-large:                           25px;
+@global-grid-gutter:                            25px;
+@global-grid-gutter-large:                      35px;
 
 //
 // Controls
 //
 
-@global-height:                                 35px;
-@global-height-mini:                            25px;
-@global-height-small:                           30px;
-@global-height-large:                           45px;
+@global-height:                                 30px;
+@global-height-mini:                            20px;
+@global-height-small:                           25px;
+@global-height-large:                           40px;
 
 //
 // Z-index
 //
 
 @global-z-index:                                1000;
-
-
-// Internal
-// ==========================================================================
-
-@global-image-path:                             'images';
