--- a/styles/red/style.less
+++ b/styles/red/style.less
@@ -3,4 +3,8 @@
 @global-link-color: #c13023;
 @global-link-hover-color: #99290f;
 
-@global-primary-background: #e63408;
+@global-primary-background: #e63c28;
+
+@panel-box-primary-background: @global-primary-background;
+@panel-box-primary-color: @global-contrast-color;
+@panel-box-primary-title-color: @global-contrast-color;
