--- a/less/uikit/base.less
+++ b/less/uikit/base.less
@@ -14,8 +14,11 @@
 
 @base-link-color:                               @global-link-color;
 @base-link-hover-color:                         @global-link-hover-color;
+@base-em-color:                                 @global-link-color;
 @base-ins-color:                                @global-color;
 @base-mark-color:                               @global-color;
+@base-ins-background:                           @global-default-active-background;
+@base-mark-background:                          @global-default-active-background;
 
 @base-margin-vertical:                          @global-margin;
 
@@ -42,7 +45,7 @@
 
 @base-code-font-size:                           round((@global-font-size * 0.85)); // 12px / 14px
 
-@base-pre-background:                           #fafafa;
+@base-pre-background:                           @global-default-hover-background;
 @base-pre-color:                                @global-color;
 @base-pre-font-size:                            round((@global-font-size * 0.85)); // 12px / 14px
 @base-pre-line-height:                          round((@base-pre-font-size * 1.46)); // 18px / 20px
@@ -52,7 +55,7 @@
 //
 
 @base-code-border:                              @global-border;
-@base-code-background:                          #fafafa;
+@base-code-background:                          @global-default-hover-background;
 @base-pre-border:                               @global-border;
 
 
