--- a/less/uikit/block.less
+++ b/less/uikit/block.less
@@ -7,8 +7,9 @@
 // Variables
 // ========================================================================
 
-@block-default-background:                      @global-background;
+@block-default-background:                     @global-background;
 
+@block-muted-background:                      @global-default-active-background;
 
 // Component
 // ========================================================================
