--- a/less/uikit/comment.less
+++ b/less/uikit/comment.less
@@ -26,11 +26,11 @@
 
 @comment-padding:                               10px;
 @comment-border:                                @global-border;
-@comment-background:                            #fafafa;
+@comment-background:                            @global-default-background;
 
 @comment-primary-border:                        fade(@comment-primary-color, 30%);
-@comment-primary-background:                    #ebf7fd;
-@comment-primary-color:                         #2d7091;
+@comment-primary-background:                    fade(@global-primary-background, 20%);
+@comment-primary-color:                         @global-link-color;
 @comment-primary-text-shadow:                   @global-text-shadow;
 
 
