--- a/less/uikit/dropdown.less
+++ b/less/uikit/dropdown.less
@@ -8,12 +8,12 @@
 // ========================================================================
 
 @dropdown-z-index:                              @global-z-index + 20;
-@dropdown-background:                           #fff;
+@dropdown-background:                           @global-background;
 @dropdown-color:                                @global-color;
 @dropdown-divider-border:                       @global-border;
 
 @dropdown-navbar-margin:                        6px;
-@dropdown-navbar-background:                    #fff;
+@dropdown-navbar-background:                    @global-default-background;
 @dropdown-navbar-color:                         @global-color;
 
 //
