--- a/less/uikit/list.less
+++ b/less/uikit/list.less
@@ -9,7 +9,7 @@
 
 @list-line-border:                              @global-border;
 
-@list-striped-background:                       #fafafa;
+@list-striped-background:                       @global-default-active-background;
 
 //
 // New
