--- a/less/uikit/subnav.less
+++ b/less/uikit/subnav.less
@@ -13,7 +13,7 @@
 
 @subnav-line-border:                            @global-border;
 
-@subnav-pill-hover-background:                  #fafafa;
+@subnav-pill-hover-background:                  @global-default-hover-background;
 @subnav-pill-hover-color:                       @global-color;
 @subnav-pill-active-background:                 @global-primary-background;
 @subnav-pill-active-color:                      @global-contrast-color;
