--- a/less/uikit/table.less
+++ b/less/uikit/table.less
@@ -12,7 +12,7 @@
 @table-caption-color:                           @global-muted-color;
 @table-caption-font-size:                       round((@global-font-size * 0.85)); // 12px / 14px
 
-@table-striped-background:                      #fafafa;
+@table-striped-background:                      @global-default-active-background;
 
 @table-hover-background:                        darken(@table-striped-background, 4%);
 
