--- a/less/uikit/variables.less
+++ b/less/uikit/variables.less
@@ -13,12 +13,12 @@
 // Text
 //
 
-@global-color:                                  #444;
-@global-muted-color:                            #999;
-@global-text-shadow:                            #fff;
+@global-color:                                  #ddd;
+@global-muted-color:                            #ccc;
+@global-text-shadow:                            #3f3f3f;
 
-@global-link-color:                             #07D;
-@global-link-hover-color:                       #059;
+@global-link-color: #286981;
+@global-link-hover-color: #00579f;
 
 @global-contrast-color:                         #fff;
 @global-contrast-text-shadow:                   rgba(0,0,0,0.1);
@@ -30,19 +30,19 @@
 // Backgrounds & Borders
 //
 
-@global-background:                             #fff;
-@global-border:                                 #ddd;
+@global-background:                             #444;
+@global-border:                                 #333;
 
-@global-border-radius:                          4px;
+@global-border-radius:                          0;
 
-@global-default-background:                     #f5f5f5;
-@global-default-hover-background:               #fafafa;
-@global-default-active-background:              #eee;
+@global-default-background:                     #555;
+@global-default-hover-background:               #5a5a5a;
+@global-default-active-background: #666;
 
-@global-primary-background:                     #00a8e6;
-@global-success-background:                     #8cc14c;
-@global-warning-background:                     #faa732;
-@global-danger-background:                      #da314b;
+@global-primary-background: #1565b2;
+@global-success-background: #688c39;
+@global-warning-background: #ae661e;
+@global-danger-background: #be2433;
 
 //
 // Spacings
