--- a/less/uikit/tab.less
+++ b/less/uikit/tab.less
@@ -10,7 +10,7 @@
 @tab-border:                                    @global-border;
 @tab-color:                                     @global-link-color;
 @tab-hover-border:                              rgba(0,0,0,0.06);
-@tab-hover-background:                          #f5f5f5;
+@tab-hover-background:                          @global-default-hover-background;
 @tab-hover-color:                               @global-link-hover-color;
 @tab-active-border:                             @global-border;
 @tab-active-background:                         @global-background;
