--- a/less/uikit/text.less
+++ b/less/uikit/text.less
@@ -12,6 +12,10 @@
 @text-large-font-size:                          round((@global-font-size * 1.28)); // 18px / 20px
 @text-large-line-height:                        round((@text-large-font-size * 1.32)); // 24px / 26px
 
+@text-primary-color:                            @global-link-color;
+@text-success-color:                            @global-success-background;
+@text-warning-color:                            @global-warning-background;
+@text-danger-color:                             @global-danger-background;
 @text-muted-color:                              @global-muted-color;
 @text-contrast-color:                           @global-contrast-color;
 
